CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (unittests)

IF ( WIN32 )
    SET ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4820 /wd4996" )
ENDIF ( WIN32 )

INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/contrib/cunit/include/cunit/")

IF ( UNITTEST_TOOLS )
    ADD_SUBDIRECTORY ( "${PROJECT_SOURCE_DIR}/tools" )
ENDIF ( UNITTEST_TOOLS )

